tests/NormalTests/paczka1/fuzzy1/57408633.err
Error in line 8: jREFdAJrytg S373 60,7
Error in line 18: jREFdAJrytg A884 92,2
Error in line 21: jREFdAJrytg A602 41,8
Error in line 26: 4wJQwTx1L S649 55,0
Error in line 22: jREFdAJrytg S649 33,8
Error in line 34: jREFdAJrytg A602 40,0
Error in line 35: jREFdAJrytg S649 15,1
